Continent/Country radio button functional

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
 	</div>
       </div>
       <div id="uicontainer">
+	  	
+
+	
 	<div id="mapradio">
 	  <input type="radio" id="mapradio_2d" name="mapradio"><label for="mapradio_2d">2D</label>
 	  <input type="radio" id="mapradio_globe" name="mapradio" checked="checked"><label for="mapradio_globe">Globe</label>
@@ -92,6 +95,10 @@
 	  <div style="width:100%;display:block;text-align:center;">
 	    <input type="file" name="filename" id="filename">
 	  </div>
+	  		<div id="continent_radio">
+	  <input type="radio" id="country" name="continent_radio"><label for="country">country</label>
+	  <input type="radio" id="continent" name="continent_radio" checked="checked"><label for="continent">continent</label>
+	</div>
 	</div>
 	<div id="slidercontainer">
 	  <div id="play">play</div>
