remove old authors name and make country coloring default

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 	  <input type="radio" id="mapradio_globe" name="mapradio" checked="checked"><label for="mapradio_globe">Globe</label>
 	</div>
 	<div id="toolbox">
-	  <button id="settings" OnClick="UpdateStats()" >Settings</button>
-	  <button id="about">About</button>
+	  <button id="about">Help</button>
 	</div>
 	<div id="subtypecontainer" style="margin-top:10px;">
 	  <div id="input_data" style="width:100%;display:block;text-align:center;margin-bottom:10px;"></div>
@@ -93,8 +92,8 @@
 	    <input type="file" name="filename" id="filename">
 	  </div>
 	  		<div id="continent_radio">
-	  <input type="radio" id="country" name="continent_radio"><label for="country">country</label>
-	  <input type="radio" id="continent" name="continent_radio" checked="checked"><label for="continent">continent</label>
+	  <input type="radio" id="country" name="continent_radio"   checked="checked"><label for="country">country</label>
+	  <input type="radio" id="continent" name="continent_radio"><label for="continent">continent</label>
 	</div>
 	</div>
 	<div id="slidercontainer">
@@ -204,13 +203,10 @@
 	</div>
 
     <div id="summarybox">
+    Upload a formatted Json file or click Help
     <!-- to be populated by Updatestatistics           -->
 	  </div>
 
-    <div id="footer">
-      <p><a href="README.md">README.md</a>, Branch: dev
-	<br/>Based on CS 725 Project by Reid Rankin and Ayush Khandelwal
-      </p>
-    </div>
+
   </body>
 </html>
