remove redundant css styles & fix continent button pointing to wrong year

--- a/index.html
+++ b/index.html
@@ -98,37 +98,36 @@
 	</div>
 	<div id="slidercontainer">
 	  <div id="play">play</div>
-	  <div id="slidercontainer_inner">
+ <div id="slidercontainer_inner">
 	    <div id="slider">
 	      <div id="timelabel"></div>
 	    </div>
 	  </div>
-	</div>
+  	</div>
 	<div id="aboutbox">
       <h3>Usage</h3>
       <p>Upload a json file with the fields "value" , "year" and "country code" where country code is the three letter ISO 3166 code or use one of the example files below. </p>
       <ul>
-        <li>The choropleth map will be colored according to the current year's data. The play button on the bottom animates the change of the value over the years. </li>
-        <li>The continent button colors the countries according to the continent's (unweighted) average . 
-        <li>The summary box provides a quick view over the most important statistics of the dataset.</li>
+        <li>The choropleth map will be colored according to the current year's data. The play button on the bottom animates the change of the value over the years </li>
+        <li>The continent button colors the countries according to the continent's (unweighted) average 
+        <li>The summary box provides a quick view over the most important statistics of the dataset</li>
         <li>Clicking any country brings up a line graph of the current dataset for the selected country along with the continent's average </li>
       </ul>
-       <p> The user can upload multiple datasets. Each of them has its own color which is used as base color for the choropleth map but also the line graphs.
-           When more than one dataset is loaded, clicking any country will bring up line charts of all the datasets in a single view. </p>
+       <p> The user can upload multiple datasets. Each of them has its own color which is used as base color for the choropleth map but also the line graphs
+           When more than one dataset is loaded, clicking any country will bring up line charts of all the datasets in a single view </p>
           
     <h3>Data</h3>
-	  <p>All the datasets used in this tool were acquired from <a href="http://data.worldbank.org/" target="blank">http://data.worldbank.org/</a>
-      some example files can be found in:</p>
-	  <p>
-	    <a href="data/examples/" target="blank">Example Data</a>
-	  </p>
+	  <p>All the datasets used in this tool were acquired from <a href="http://data.worldbank.org/" target="blank">http://data.worldbank.org/</a>. </br>
+      Some example files can be found in:</p>
+		 <a href="data/examples/" target="blank">Example Data</a>
+	 
        <h3>Developer's Notes</h3>
        <p> The complete source code is hosted on github <a href="https://github.com/ChristosT/world-vis" target="blank">https://github.com/ChristosT/world-vis</a>.
-       Under the /data directory the population.json and area.json files can be used for cretaing weighted averages or other interesting statistics.</p>
+       Under the /data directory the population.json and area.json files can be used for computing weighted averages or other interesting statistics.</p>
        
 	  <h3>Acknowledgements</h3>
       <p>
-      This projects is an extension of the WorldVis, FluNet Visualization tool  which can be found at 
+      This project is an extension of the WorldVis, FluNet Visualization tool  which can be found at 
       <a href="http://www.cs.odu.edu/~mweigle/research/world-vis/" target="blank">http://www.cs.odu.edu/~mweigle/research/world-vis/</a>.
       </p>
       Juliette Pardue, Mridul Sen & Christos Tsolakis, Spring 2016
