add reset,next,previous buttons

--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
 	</div>
 	</div>
 	<div id="slidercontainer">
+      <div id="reset">reset</div>
+      <div id="previous">previous</div>
 	  <div id="play">play</div>
+       <div id="next">next</div>
+ 
  <div id="slidercontainer_inner">
 	    <div id="slider">
 	      <div id="timelabel"></div>
@@ -108,7 +112,9 @@
       <h3>Usage</h3>
       <p>Upload a json file with the fields "value" , "year" and "country code" where country code is the three letter ISO 3166 code or use one of the example files below. </p>
       <ul>
-        <li>The choropleth map will be colored according to the current year's data. The play button on the bottom animates the change of the value over the years </li>
+        <li> The choropleth map will be colored according to the current year's data.</li> 
+        <li> The play button on the bottom animates the change of the value over the years </li>
+        <li> With the next,previous and reset buttons the user can navigate through the years </li>
         <li>The continent button colors the countries according to the continent's (unweighted) average 
         <li>The summary box provides a quick view over the most important statistics of the dataset</li>
         <li>Clicking any country brings up a line graph of the current dataset for the selected country along with the continent's average </li>
