--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
 	  <div style="width:100%;display:block;text-align:center;">
 	    <input type="file" name="filename" id="filename">
 	  </div>
-	  		<div id="continent_radio">
+	<div id="continent_radio">
 	  <input type="radio" id="country" name="continent_radio"   checked="checked"><label for="country">country</label>
 	  <input type="radio" id="continent" name="continent_radio"><label for="continent">continent</label>
+	</div>
+	<div id="saturationlegend">
 	</div>
 	</div>
 	<div id="slidercontainer">
